mobile logo test

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
     <nav>
         <!--                                              Desktop Navigation -->
-        <img src="images/vcs.png" alt="" height="60px">
+        <img src="images/current-logo.png" alt="" height="80px">
         <div id="bottom-nav-bar" class="side-nav" class="container">
             <ul id="main-navigation" class="side-nav">
                 <li><a href="">HOME</a></li>
