added navigation drop down hover sub menu items

--- a/index.html
+++ b/index.html
@@ -73,24 +73,27 @@
             <div id="bottom-nav-bar" class="side-nav" class="container">
                 <ul id="main-navigation" class="side-nav">
                     <li><a class="active-menu" href="">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
-                        <ul class="sub-nav">
+                    <li class="about-li"><a class="about-dropdown" href="">ABOUT<i class="fas fa-chevron-down"></i></a>
+                        <ul class="sub-nav sub1">
                             <li><a href="">JOBS</a></li>
                             <li><a href="">ABOUT VCS</a></li>
                         </ul>
-                    <li><a href="">SERVICES</a></li>
-                        <ul class="sub-nav">
+                    </li>
+                    <li class="services-li"><a href="">SERVICES<i class="fas fa-chevron-down"></i></a>
+                        <ul class="sub-nav sub2">
                             <li><a href="">REBAR FABRICATION</a></li>
                             <li><a href="">CONCRETE</a></li>
                             <li><a href="">BUILDING MATERIALS</a></li>
                             <li><a href="">EQUIPMENT AND TOOLS</a></li>
                         </ul>
+                    </li>
                     <li><a href="">PRODUCTS</a></li>
                     <li><a href="">PROMOTIONS</a></li>
-                    <li><a href="">CONTACT</a></li>
-                        <ul class="sub-nav">
+                    <li class="contact-li"><a href="">CONTACT<i class="fas fa-chevron-down"></i></a>
+                        <ul class="sub-nav sub3">
                             <li><a href="">APPLY FOR CREDIT</a></li>
                         </ul>
+                    </li>
                 </ul>
                 <button class="quote" type="button">
                     REQUEST A QUOTE 
