updated the home page

--- a/index.html
+++ b/index.html
@@ -229,20 +229,32 @@
                 </div>
             </div>
         </div>
+        <div class="about-clippy"></div>
     </section>
 
     <!-- ============================================ -->
-	<!--                    CARDS                     -->
+	<!--                   PARTNERS                   -->
     <!-- ============================================ -->
 
-    <section id="">
-        <div class="container">
-            
+    <section id="partners">
+        <div class="partners-topper">
+            <h2 class="heading-lines"><SPAN>OUR</SPAN> PARTNERS</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Deserunt corporis harum laborum! Dolor officiis distinctio 
+                vitae totam, commodi natus ipsa.
+            </p>
+        </div>
+        <div class="partners-logo">
+            <img src="../images/compnay1.jpg" alt="">
+            <img src="../images/compnay2.jpg" alt="">
+            <img src="../images/compnay3.jpg" alt="">
+            <img src="../images/compnay4.jpg" alt="">
+            <img src="../images/compnay5.jpg" alt="">
         </div>
     </section>
 
     <!-- ============================================ -->
-	<!--                    CARDS                     -->
+	<!--                   GALLERY                    -->
     <!-- ============================================ -->
 
     <section id="">
