added more elements to home pge mobile

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
                 <h1>Your Pacific Northwest Construction Supply Specialist</h1>
                 <h2>Valley Construction Supply is the largest locally owned and operated
                     supplier of wholesale concrete, framing, rebar, draining and venting 
-                    hardware for Seatlle and the surrounding Puget Sound area.
+                    hardware for Seattle and the surrounding Puget Sound area.
                 </h2>
-                <button class="about solid">ABOUT VCS</button>
-                <button class="primary landing-b">CALL US</button>
+                <button class="primary landing-b">ABOUT VCS</button>
+                <button class="about solid">CALL US</button>
             </div>
         </div>
         <div class="clippy-desktop"></div>
@@ -224,7 +224,7 @@
                         <i class="far fa-building"></i>
                         <div>
                             <span>951</span>
-                            <h4>Cups of Coffe</h4>
+                            <h4>Cups of Coffee</h4>
                         </div>
                     </div>
                 </div>
@@ -310,6 +310,8 @@
                 <div id="img5"><img class="image" src="../images/Product 10.jpg" alt=""></div>
                 <div id="img6"><img class="image" src="../images/Project 2.jpg" alt=""></div>
             </div>
+            <button class="about solid gallery-button">ABOUT VCS</button>
+            <div class="clippy-gallery"></div>
         </section>
 
     <!-- ============================================ -->
