--- a/index.html
+++ b/index.html
@@ -238,58 +238,58 @@
     <!-- ============================================ -->
 
     <section id="building-the-future">
-            <div class="future-topper container">
-                <h2 class="heading-lines"><SPAN>BUILDING</SPAN> THE FUTURE</h2>
-                <div class="future-icons">
-                    <div class="icon-group">
-                        <i class="fas fa-home"></i>
-                        <h3>Residential</h3>
-                    </div>
-                    <div class="icon-group">
-                        <i class="fas fa-hotel"></i>
-                        <h3>Multi-Family</h3>
-                    </div>
-                    <div class="icon-group">
-                        <i class="fas fa-city"></i>
-                        <h3>Commercial</h3>
-                    </div>
+        <div class="future-topper container">
+            <h2 class="heading-lines"><SPAN>BUILDING</SPAN> THE FUTURE</h2>
+            <div class="future-icons">
+                <div class="icon-group">
+                    <i class="fas fa-home"></i>
+                    <h3>Residential</h3>
+                </div>
+                <div class="icon-group">
+                    <i class="fas fa-hotel"></i>
+                    <h3>Multi-Family</h3>
+                </div>
+                <div class="icon-group">
+                    <i class="fas fa-city"></i>
+                    <h3>Commercial</h3>
                 </div>
             </div>
-            <div class="future-cards">
-                <div class="future-card">
-                    <img src="../images/Product 10.jpg" alt="">
-                    <div class="future-card-content container">
-                        <h3>Siesmic Retro Fitting</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                        Quasi asperiores explicabo eius deleniti, earum sed labore 
-                        unde! Debitis, explicabo officiis!
-                        </p>
-                        <button>Read More<i class="fas fa-chevron-right"></i></button>
-                    </div>
-                </div>
-                <div class="future-card">
-                    <img src="../images/Product 10.jpg" alt="">
-                    <div class="future-card-content container">
-                        <h3>Siesmic Retro Fitting</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                        Quasi asperiores explicabo eius deleniti, earum sed labore 
-                        unde! Debitis, explicabo officiis!
-                        </p>
-                        <button>Read More<i class="fas fa-chevron-right"></i></button>
-                    </div>
-                </div>
-                <div class="future-card">
-                    <img src="../images/Product 10.jpg" alt="">
-                    <div class="future-card-content container">
-                        <h3>Siesmic Retro Fitting</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                        Quasi asperiores explicabo eius deleniti, earum sed labore 
-                        unde! Debitis, explicabo officiis!
-                        </p>
-                        <button>Read More<i class="fas fa-chevron-right"></i></button>
-                    </div>
+        </div>
+        <div class="future-cards">
+            <div class="future-card">
+                <img src="../images/Product 10.jpg" alt="">
+                <div class="future-card-content container">
+                    <h3>Siesmic Retro Fitting</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Quasi asperiores explicabo eius deleniti, earum sed labore 
+                    unde! Debitis, explicabo officiis!
+                    </p>
+                    <button>Read More<i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
+            <div class="future-card">
+                <img src="../images/Product 10.jpg" alt="">
+                <div class="future-card-content container">
+                    <h3>Siesmic Retro Fitting</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Quasi asperiores explicabo eius deleniti, earum sed labore 
+                    unde! Debitis, explicabo officiis!
+                    </p>
+                    <button>Read More<i class="fas fa-chevron-right"></i></button>
+                </div>
+            </div>
+            <div class="future-card">
+                <img src="../images/Product 10.jpg" alt="">
+                <div class="future-card-content container">
+                    <h3>Siesmic Retro Fitting</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Quasi asperiores explicabo eius deleniti, earum sed labore 
+                    unde! Debitis, explicabo officiis!
+                    </p>
+                    <button>Read More<i class="fas fa-chevron-right"></i></button>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- ============================================ -->
@@ -297,22 +297,22 @@
     <!-- ============================================ -->
 
     <section id="gallery">
-            <div class="gallery-topper container">
-                <h2 class="heading-lines"><SPAN>PROJECT</SPAN> GALLERY</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nemo rerum eveniet
-                   iure tempore odit voluptatum expedita officia quam corporis?</p>
-            </div>
-            <div class="gallery container">
-                <div id="img1"><img class="image" src="../images/Product 3.jpg" alt=""></div>
-                <div id="img2"><img class="image" src="../images/Porject 4.jpg" alt=""></div>
-                <div id="img3"><img class="image" src="../images/Project 1.jpg" alt=""></div>
-                <div id="img4"><img class="image" src="../images/Project 5.jpg" alt=""></div>
-                <div id="img5"><img class="image" src="../images/Product 10.jpg" alt=""></div>
-                <div id="img6"><img class="image" src="../images/Project 2.jpg" alt=""></div>
-            </div>
-            <button class="about solid gallery-button">ABOUT VCS</button>
-            <div class="clippy-gallery"></div>
-        </section>
+        <div class="gallery-topper container">
+            <h2 class="heading-lines"><SPAN>PROJECT</SPAN> GALLERY</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nemo rerum eveniet
+                iure tempore odit voluptatum expedita officia quam corporis?</p>
+        </div>
+        <div class="gallery container">
+            <div id="img1"><img class="image" src="../images/Product 3.jpg" alt=""></div>
+            <div id="img2"><img class="image" src="../images/Porject 4.jpg" alt=""></div>
+            <div id="img3"><img class="image" src="../images/Project 1.jpg" alt=""></div>
+            <div id="img4"><img class="image" src="../images/Project 5.jpg" alt=""></div>
+            <div id="img5"><img class="image" src="../images/Product 10.jpg" alt=""></div>
+            <div id="img6"><img class="image" src="../images/Project 2.jpg" alt=""></div>
+        </div>
+        <button class="about solid gallery-button">ABOUT VCS</button>
+        <div class="clippy-gallery"></div>
+    </section>
 
     <!-- ============================================ -->
 	<!--                   PARTNERS                   -->
@@ -335,15 +335,53 @@
         </div>
     </section>
 
-    <section id="">
+    <!-- ============================================ -->
+	<!--                     SALES                    -->
+    <!-- ============================================ -->
+
+    <section id="sales">
         <div class="container">
-        
+            <div class="partners-topper sales-topper">
+                <h2 class="heading-lines"><SPAN>OUR</SPAN> SALES TEAM</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Deserunt corporis harum laborum! Dolor officiis distinctio 
+                    vitae totam, commodi natus ipsa.
+                </p>
+            </div>
+            <div class="sales-people">
+                <div class="sales-card">
+                    <img src="../images/headshot.jpg" alt="">
+                    <h3>First Lastname</h3>
+                    <h4>Job Position</h4>
+                </div>
+                <div class="sales-card">
+                    <img src="../images/headshot.jpg" alt="">
+                    <h3>First Lastname</h3>
+                    <h4>Job Position</h4>
+                </div>
+                <div class="sales-card">
+                    <img src="../images/headshot.jpg" alt="">
+                    <h3>First Lastname</h3>
+                    <h4>Job Position</h4>
+                </div>
+                <div class="sales-card">
+                    <img src="../images/headshot.jpg" alt="">
+                    <h3>First Lastname</h3>
+                    <h4>Job Position</h4>
+                </div>
+            </div>
         </div>
+        <div class="clippy-sales"></div>
     </section>
 
-    <section id="">
-        <div class="container">
-        
+    <!-- ============================================ -->
+	<!--                    CONTACT                   -->
+    <!-- ============================================ -->
+
+    <section id="contact">
+        <div class="contact-group container">
+            <h2>Questions? Get in touch today</h2>
+            <button class="about solid gallery-button">ABOUT VCS</button>
         </div>
     </section>
 
