ipad test finish

--- a/index.html
+++ b/index.html
@@ -345,7 +345,9 @@
                 <h2 class="heading-lines"><SPAN>OUR</SPAN> SALES TEAM</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                     Deserunt corporis harum laborum! Dolor officiis distinctio 
-                    vitae totam, commodi natus ipsa.
+                    vitae totam, commodi natus ipsa. Lorem ipsum dolor sit amet 
+                    consectetur adipisicing elit. Velit tempora sed esse dolor 
+                    sint in, tempore a totam deserunt beatae.
                 </p>
             </div>
             <div class="sales-people">
@@ -381,7 +383,7 @@
     <section id="contact">
         <div class="contact-group container">
             <h2>Questions? Get in touch today</h2>
-            <button class="about solid gallery-button">ABOUT VCS</button>
+            <button class="about solid gallery-button contact-button">ABOUT VCS</button>
         </div>
     </section>
 
