added desktop styling, not finished

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
     <section id="contact">
         <div class="contact-group container">
             <h2>Questions? Get in touch today</h2>
-            <button class="about solid gallery-button contact-button">ABOUT VCS</button>
+            <button class="about solid gallery-button">ABOUT VCS</button>
         </div>
     </section>
 
