added future section desktop style

--- a/index.html
+++ b/index.html
@@ -240,6 +240,13 @@
     <section id="building-the-future">
         <div class="future-topper container">
             <h2 class="heading-lines"><SPAN>BUILDING</SPAN> THE FUTURE</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione 
+               debitis voluptatum perspiciatis quis facere corrupti, odit enim, illo 
+               cupiditate laborum nemo officiis a earum nihil sint repudiandae veniam 
+               poris dolorum vel illum? Quia tenetur earum, esse rerum eum accusantium 
+               corporis perferendis dolorem eos at deserunt minima quibusdam doloribus 
+               temporibus?
+            </p>
             <div class="future-icons">
                 <div class="icon-group">
                     <i class="fas fa-home"></i>
@@ -255,7 +262,7 @@
                 </div>
             </div>
         </div>
-        <div class="future-cards">
+        <div class="future-cards container">
             <div class="future-card">
                 <img src="../images/Product 10.jpg" alt="">
                 <div class="future-card-content container">
