added footer and desktop responsiveness

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                     <i class="fas fa-cogs"></i>
                     <h3>Complete Inventory</h3>
                     <div class="card-line"></div>
-                    <p>We stock a comprehensive line of supplies, tools, and materials for any
-                       construction need.  That includes foundation materials, concrete accessories,
+                    <p>Valley Construction Supply stocks a comprehensive line of supplies, tools, and materials for all of
+                       your construction needs.  That includes foundation materials, concrete accessories,
                        and more.
                     </p>
                     <button>Read More<i class="fas fa-chevron-right"></i></button>
@@ -152,9 +152,9 @@
                     <i class="fas fa-cogs"></i>
                     <h3>Rebar Fabrication</h3>
                     <div class="card-line"></div>
-                    <p>Valley Rebar Fabrication has the resources to deliver fabricated rebar
-                       to meet exact specifications.  This includes free estimates, detailing,
-                       and shop drawings.
+                    <p>With our privately owned fabrication facility in Pacific your steel requirements 
+                       can be fulfilled. Using the standard ASA bar bend schedule our fabrication capacity 
+                       can transform your structural reinforcing drawings into “real” life material.
                     </p>
                     <button>Read More<i class="fas fa-chevron-right"></i></button>
                 </div>
@@ -165,11 +165,11 @@
             <div class="card container">
                 <div class="card-content">
                     <i class="fas fa-cogs"></i>
-                    <h3>Best Service Since 1982</h3>
+                    <h3>Erosion Control</h3>
                     <div class="card-line"></div>
-                    <p>Valley Construction Supply is determined to help contractors with their project
-                       needs.  We offer everything you need from a large inventory of building supplies, 
-                       tools and materials.
+                    <p>We offer a wide variety Erosion control products, from Poly sheeting, Catch Basin Socks, 
+                       Poly Sand Bags, Reinforced Filter Fence, And numerous other Geotextile products including 
+                       Straw Bales, Straw Blankets, Coconut Blankets and Straw Waddles
                     </p>
                     <button>Read More<i class="fas fa-chevron-right"></i></button>
                 </div>
@@ -187,7 +187,7 @@
         <div class="about-dark"></div>
         <div class="about-container container">
             <div class="about-content">
-                <h2 class="heading-lines"><SPAN>ABOUT</SPAN> VALLEY</h2>
+                <h2 class="heading-lines"><span>ABOUT</span> VALLEY</h2>
                 <img src="../images/worker.jpg" alt="" width="300" height="300">
                 <div class="about-box">
                     <h3><span>Committed</span> to superior quality and results</h3>
@@ -239,7 +239,7 @@
 
     <section id="building-the-future">
         <div class="future-topper container">
-            <h2 class="heading-lines"><SPAN>BUILDING</SPAN> THE FUTURE</h2>
+            <h2 class="heading-lines"><span>BUILDING</span> THE FUTURE</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione 
                debitis voluptatum perspiciatis quis facere corrupti, odit enim, illo 
                cupiditate laborum nemo officiis a earum nihil sint repudiandae veniam 
@@ -277,7 +277,7 @@
             <div class="future-card">
                 <img src="../images/Product 10.jpg" alt="">
                 <div class="future-card-content container">
-                    <h3>Siesmic Retro Fitting</h3>
+                    <h3>Net Zero Energy Law</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Quasi asperiores explicabo eius deleniti, earum sed labore 
                     unde! Debitis, explicabo officiis!
@@ -288,7 +288,7 @@
             <div class="future-card">
                 <img src="../images/Product 10.jpg" alt="">
                 <div class="future-card-content container">
-                    <h3>Siesmic Retro Fitting</h3>
+                    <h3>Green Building</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Quasi asperiores explicabo eius deleniti, earum sed labore 
                     unde! Debitis, explicabo officiis!
@@ -305,9 +305,12 @@
 
     <section id="gallery">
         <div class="gallery-topper container">
-            <h2 class="heading-lines"><SPAN>PROJECT</SPAN> GALLERY</h2>
+            <h2 class="heading-lines"><span>PROJECT</span> GALLERY</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nemo rerum eveniet
-                iure tempore odit voluptatum expedita officia quam corporis?</p>
+                iure tempore odit voluptatum expedita officia quam corporis? Lorem ipsum dolor 
+                sit amet consectetur adipisicing elit. Animi quae pariatur asperiores nam incidunt, 
+                est culpa placeat aliquam repellendus eius?
+            </p>
         </div>
         <div class="gallery container">
             <div id="img1"><img class="image" src="../images/Product 3.jpg" alt=""></div>
@@ -317,7 +320,7 @@
             <div id="img5"><img class="image" src="../images/Product 10.jpg" alt=""></div>
             <div id="img6"><img class="image" src="../images/Project 2.jpg" alt=""></div>
         </div>
-        <button class="about solid gallery-button">ABOUT VCS</button>
+        <button class="solid gallery-button">VIEW GALLERY</button>
         <div class="clippy-gallery"></div>
     </section>
 
@@ -325,9 +328,9 @@
 	<!--                   PARTNERS                   -->
     <!-- ============================================ -->
 
-    <section id="partners" class="container">
+    <section id="partners">
         <div class="partners-topper">
-            <h2 class="heading-lines"><SPAN>OUR</SPAN> PARTNERS</h2>
+            <h2 class="heading-lines"><span>OUR</span> PARTNERS</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                 Deserunt corporis harum laborum! Dolor officiis distinctio 
                 vitae totam, commodi natus ipsa.
@@ -347,34 +350,41 @@
     <!-- ============================================ -->
 
     <section id="sales">
-        <div class="container">
-            <div class="partners-topper sales-topper">
-                <h2 class="heading-lines"><SPAN>OUR</SPAN> SALES TEAM</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Deserunt corporis harum laborum! Dolor officiis distinctio 
-                    vitae totam, commodi natus ipsa. Lorem ipsum dolor sit amet 
-                    consectetur adipisicing elit. Velit tempora sed esse dolor 
-                    sint in, tempore a totam deserunt beatae.
+        <div class="sales-container container">
+            <div class="sales-topper">
+                <h2 class="heading-lines"><span>OUR</span> SALES TEAM</h2>
+                <p>Valley Construction Supply was established in 1982 by Principal Cliff 
+                   Beatty. Our goal is to assure each customer is greeted by our top notch 
+                   customer service, as well as full attention to detail from customer to 
+                   customer. Here at Valley Construction Supply we believe that the construction 
+                   industry is a relationship business and that our customers deserve personalized, 
+                   hands-on customer service that serves them beyond their construction material needs! 
+                   Scroll, to learn more about our sales staff below!!!
                 </p>
             </div>
             <div class="sales-people">
                 <div class="sales-card">
-                    <img src="../images/headshot.jpg" alt="">
+                    <img src="../images/Gene Gierek-copy.jpg" alt="">
                     <h3>First Lastname</h3>
                     <h4>Job Position</h4>
                 </div>
                 <div class="sales-card">
-                    <img src="../images/headshot.jpg" alt="">
+                    <img src="../images/Gus Laramore-copy.jpg" alt="">
                     <h3>First Lastname</h3>
                     <h4>Job Position</h4>
                 </div>
                 <div class="sales-card">
-                    <img src="../images/headshot.jpg" alt="">
+                    <img src="../images/Jeff Buxton-copy.jpg" alt="">
                     <h3>First Lastname</h3>
                     <h4>Job Position</h4>
                 </div>
                 <div class="sales-card">
-                    <img src="../images/headshot.jpg" alt="">
+                    <img src="../images/Joe Garcia-copy.jpg" alt="">
+                    <h3>First Lastname</h3>
+                    <h4>Job Position</h4>
+                </div>
+                <div class="sales-card">
+                    <img src="../images/Mark Howard-copy.jpg" alt="">
                     <h3>First Lastname</h3>
                     <h4>Job Position</h4>
                 </div>
@@ -390,14 +400,88 @@
     <section id="contact">
         <div class="contact-group container">
             <h2>Questions? Get in touch today</h2>
-            <button class="about solid gallery-button">ABOUT VCS</button>
+            <button class="solid about-content-button contact-button">CONTACT VCS</button>
         </div>
     </section>
 
 </main>
 
 <footer>
+    <div aria-hidden="true" class="footer-dark"></div>
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-item">
+                <img src="images/current-logo.png" alt="logo" width="250" height="90">
+                <p> 
+                   Here at Valley Construction Supply we believe that the construction industry is a relationship 
+                   business and that our customers deserve personalized, hands-on customer service 
+                   that serves them beyond their construction material needs</p>
+            </div>
+            <div class="footer-item">
+                <h3>Information</h3>
+                <div class="item-line"></div>
+                <p>Services</p>
+                <p>Sales Team</p>
+                <p>About</p>
+                <p>Products</p>
+                <p>Rebar Fabrication</p>
+                <p>Contact</p>
+            </div>
+            <div class="footer-item">
+                <h3>Address</h3>
+                <div class="item-line"></div>
 
+                <div class="location footer-location2">
+                    <div class="icon valley-footer-icon">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <div class="footer-location-info">
+                        <p>1234 Const St</p>
+                        <p>Marysville, WA <br>98277</p>
+                    </div>
+                </div>
+
+                <div class="location footer-location2">
+                    <div class="icon valley-footer-icon">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <div class="footer-location-info">
+                        <p>1234 Const St</p>
+                        <p>Marysville, WA <br>98277</p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-item">
+                <h3>Contact</h3>
+                <div class="item-line"></div>
+
+                <div class="footer-location location">
+                    <div class="icon valley-footer-icon">
+                        <i class="fas fa-phone"></i>
+                    </div>
+                    <div class="footer-location-info">
+                        <p class="uppercase">Marysville, WA</p>
+                        <p>(800) 559-8566</p>
+                    </div>
+                </div>
+
+                <div class="location footer-location">
+                    <div class="icon valley-footer-icon">
+                        <i class="fas fa-phone"></i>
+                    </div>
+                    <div class="footer-location-info">
+                        <p class="uppercase">Tacoma, WA</p>
+                        <p>(800) 922-2082</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="branding">
+            <div class="branding-line"></div>
+            <p>Designed By <br><span><a href="">Oak Harbor Web Designs</a></span></p>
+            <p>&copy Copyright 2019</p>
+        </div>
+    </div>
 </footer>
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
