fixed spacing issues and added auto prefixer

--- a/index.html
+++ b/index.html
@@ -329,14 +329,16 @@
     <!-- ============================================ -->
 
     <section id="partners">
-        <div class="partners-topper">
+        <div class="partners-topper container">
             <h2 class="heading-lines"><span>OUR</span> PARTNERS</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Deserunt corporis harum laborum! Dolor officiis distinctio 
-                vitae totam, commodi natus ipsa.
+               Deserunt corporis harum laborum! Dolor officiis distinctio 
+               vitae totam, commodi natus ipsa. Lorem, ipsum dolor sit amet 
+               consectetur adipisicing elit. Ipsam rem ratione repellat dicta 
+               sunt quo velit minima esse aspernatur commodi.
             </p>
         </div>
-        <div class="partners-logo">
+        <div class="partners-logo container">
             <img src="../images/compnay1.jpg" alt="">
             <img src="../images/compnay2.jpg" alt="">
             <img src="../images/compnay3.jpg" alt="">
@@ -412,7 +414,7 @@
         <div class="footer-content">
             <div class="footer-item">
                 <img src="images/current-logo.png" alt="logo" width="250" height="90">
-                <p> 
+                <p class="first-p"> 
                    Here at Valley Construction Supply we believe that the construction industry is a relationship 
                    business and that our customers deserve personalized, hands-on customer service 
                    that serves them beyond their construction material needs</p>
