mac about button clipping test

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <h2 class="heading-lines"><span>ABOUT</span> VALLEY</h2>
                 <img src="../images/worker.jpg" alt="" width="300" height="300">
                 <div class="about-box">
-                    <h3><span>Committed</span> to superior quality and results</h3>
+                    <h3><span>Committed to</span> superior quality and results</h3>
                     <p>Valley Construction Supply is family owned and operated for over 30 years and we have been
                        working hard to ensure we provide every customer with remarkable service and up 
                        to date product knowledge.
