chnaged future card images

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         </div>
         <div class="future-cards container">
             <div class="future-card">
-                <img src="../images/Product 10.jpg" alt="">
+                <img src="../images/seismic.jpg" alt="">
                 <div class="future-card-content container">
                     <h3>Siesmic Retro Fitting</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -275,7 +275,7 @@
                 </div>
             </div>
             <div class="future-card">
-                <img src="../images/Product 10.jpg" alt="">
+                <img src="../images/net-zero.jpg" alt="">
                 <div class="future-card-content container">
                     <h3>Net Zero Energy Law</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -286,7 +286,7 @@
                 </div>
             </div>
             <div class="future-card">
-                <img src="../images/Product 10.jpg" alt="">
+                <img src="../images/green-building.jpg" alt="">
                 <div class="future-card-content container">
                     <h3>Green Building</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
