various kyle edits

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <div class="card-line"></div>
                     <p>We offer a wide variety Erosion control products, from Poly sheeting, Catch Basin Socks, 
                        Poly Sand Bags, Reinforced Filter Fence, And numerous other Geotextile products including 
-                       Straw Bales, Straw Blankets, Coconut Blankets and Straw Waddles
+                       Straw Bales, Straw Blankets, Coconut Blankets and Straw Waddles.
                     </p>
                     <button>Read More<i class="fas fa-chevron-right"></i></button>
                 </div>
@@ -190,7 +190,7 @@
                 <h2 class="heading-lines"><span>ABOUT</span> VALLEY</h2>
                 <img src="../images/worker.jpg" alt="" width="300" height="300">
                 <div class="about-box">
-                    <h3><span>Committed to</span> superior quality and results</h3>
+                    <h3><span>Committed to</span> superior quality and results.</h3>
                     <p>Valley Construction Supply is family owned and operated for over 30 years and we have been
                        working hard to ensure we provide every customer with remarkable service and up 
                        to date product knowledge.
@@ -333,9 +333,7 @@
             <h2 class="heading-lines"><span>OUR</span> PARTNERS</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                Deserunt corporis harum laborum! Dolor officiis distinctio 
-               vitae totam, commodi natus ipsa. Lorem, ipsum dolor sit amet 
-               consectetur adipisicing elit. Ipsam rem ratione repellat dicta 
-               sunt quo velit minima esse aspernatur commodi.
+               vitae totam, commodi.
             </p>
         </div>
         <div class="partners-logo container">
@@ -420,7 +418,7 @@
                    that serves them beyond their construction material needs</p>
             </div>
             <div class="footer-item">
-                <h3>Information</h3>
+                <h3>Quick Links</h3>
                 <div class="item-line"></div>
                 <p>Services</p>
                 <p>Sales Team</p>
@@ -480,7 +478,7 @@
         </div>
         <div class="branding">
             <div class="branding-line"></div>
-            <p>Designed By <br><span><a href="">Oak Harbor Web Designs</a></span></p>
+            <p>Designed By <span><a href="">Oak Harbor Web Designs</a></span></p>
             <p>&copy Copyright 2019</p>
         </div>
     </div>
