added kyle small design chnages

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                        your construction needs.  That includes foundation materials, concrete accessories,
                        and more.
                     </p>
-                    <button>Read More<i class="fas fa-chevron-right"></i></button>
+                    <button>Read More<i class="fas fa-chevron-right"></button>
                 </div>
                 <div class="clip-bottom"></div>
             </div>
@@ -352,7 +352,7 @@
             <div class="future-card">
                 <img src="../images/net-zero.jpg" alt="">
                 <div class="future-card-content container">
-                    <h3>Energy cODE</h3>
+                    <h3>Energy Code</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Quasi asperiores explicabo eius deleniti, earum sed labore 
                     unde! Debitis, explicabo officiis!
