fixed shaking content

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                        your construction needs.  That includes foundation materials, concrete accessories,
                        and more.
                     </p>
-                    <button>Read More<i class="fas fa-chevron-right"></button>
+                    <button>Read More<i class="fas fa-chevron-right"></i></button>
                 </div>
                 <div class="clip-bottom"></div>
             </div>
